--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,3 +108,9 @@
   align-items: center;
   justify-content: center;
 }
+
+/* ******************** */
+.product-link{
+  text-decoration: none !important;
+  color: black !important;
+}
